<resources>
    <string name="charset_label">Character set:</string>
    <string name="app_name">Reveal</string>
    <string name="no_books">No eBooks Available!  Please hit \'MENU\' then \'eBook Download\' to get new eBooks or \'Refresh eBook Library\' to add eBooks already on your memory card.</string>
    <string name="no_books_xml">No books were found.</string>
    <string name="no_notes">You don\'t have any notes yet.</string>
    <string name="menu_bookmark">Bookmarks</string>
    <string name="menu_history">eBook History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_refresh_library">Refresh eBook Library</string>
    <string name="label_splash_screen">Enable Splash Screen</string>
    <string name="menu_browser">eBook Download</string>
    <string name="settings_name">Reveal Settings</string>
    <string name="summary_on_show_splash_screen">Splash screen is enabled</string>
    <string name="summary_off_show_splash_screen">Splash screen is disabled</string>
    <string name="up_one_level">..</string>
    <string name="reveal_ybk_view">Reveal</string>
    <string name="reference_not_found">Referenced eBook ({0}) not found.</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="title_browser_name">Reveal :: Online eBook Browser</string>
    <string name="menu_update">Check For Update</string>
    <string name="menu_about">About</string>
    <string name="update_in_progress">eBook Listing Update in progress</string>
    <string name="default_ebook_dir">/sdcard/reveal/ebooks/</string>
    <string name="summary_default_ebook_dir">Default is /sdcard/reveal/ebooks/</string>
    <string name="default_temp_dir">/sdcard/reveal/</string>
    <string name="default_fontsize">12</string>
    <string name="title_default_ebook_dir">Library Location</string>
    <string name="summary_default_temp_dir">Default Directory for Application TEMP</string>
    <string name="title_list_preference">List preference</string>
    <string name="summary_list_preference">An example that uses a list dialog</string>
    <string name="dialog_title_list_preference">Choose one</string>
    <string name="menu_previous">Previous Chapter</string>
    <string name="menu_next">Next Chapter</string>
    <string name="library_not_created">Could not create the default eBook folder.</string>
    <string name="update_browser">Online Update</string>
    <string name="update_url">http://revealreader.thepackhams.com/revealVersion.xml?ClientVer=</string>
    <string name="checking_ebooks">Updating eBook Catalog&#8230; This may take a few minutes depending on your connection speed.</string>
    <string name="ebook_update_complete">Finished Updating eBook Catalog</string>
    <string name="author">Jack Holt, Dave Packham, Joe Wiggins, Shon Vella, Blake VandeMerwe</string>
    <string name="contact">Contact Info for our developers.  jackcholt@gmail.com dave@thepackhams.com</string>
    <string name="website">Please Visit our website for HELP or More information  http://revealreader.thepackhams.com</string>
    <string name="close">Close</string>
    <string name="delete">Delete</string>
    <string name="title_download_url">http://www.thecoffeys.NOT/ebooks/xmlbooks.asp</string>
    <string name="credit_to_others">Special Thanks to Bryce Yancey\, Mark Coffey and Darren Remington for the wonderful resources\, YBK\'s\, Format and other eBook tools</string>
    <string name="download">Download</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="ebook_download_started">eBook Download Started</string>
    <string name="ebook_download_busy">Please wait for the directory to be updated before attempting to download more titles.</string>
    <string name="ebook_download_failed_type">Unable to download eBook type</string>
    <string name="ebook_download_failed">Unable to download eBook</string>
    <string name="ebook_download_failed_url">Unable to download eBook at given location.</string>
    <string name="ebook_download_complete">eBook Download Complete</string>
    <string name="sdcard_full">Your memory card is full</string>
    <string name="ebook_list_failed">Failed to update ebook list.  Please try again.</string>
    <string name="ebook_list_failed_url">Failed to update ebook list from server.  Please try again.</string>
    <string name="ebook_list_failed_io">Failed to update ebook list from server.  Please check your Internet connection and try again.</string>
    <string name="ebook_exists_still_download">This eBook already exists in your library.  Would you like to replace it with a new copy?</string>
    <string name="update_available"><b>Update Available:</b> A Reveal update is available. Please check the Google Play Store.</string>
    <string name="checking_for_new_version_online">Checking for new Version Online</string>
    <string name="version_you_are_running">Version you are running SVN rev </string>
    <string name="splash">Splash Screen Here</string>
    <string name="invalid_chapter">There is a problem showing that.</string>
    <string name="file_deleted">eBook Deleted</string>
    <string name="confirm_delete_ebook">Do you really want to delete the selected eBook?\n\nTitle: {0}\nFilename: {1}\n</string>
    <string name="confirm_delete_bookmark">Do you really want to delete the selected Bookmark?\n\nTitle: {0}\n</string>
    <string name="error_deleting_file">Error Deleting eBook</string>
    <string name="really_delete_title">Really Delete eBook?</string>
    <string name="really_delete_bookmark">Really Delete Bookmark?</string>
    <string name="create_sd_card_reveal_dir">Create reveal dir on sdcard ok</string>
    <string name="create_sd_card_ebook_dir">Create ebooks dir on sdcard ok</string>
    <string name="build_number">%1$d results for &amp;lt;b&amp;gt;&amp;quot;%2$s&amp;quot;&amp;lt;/b&amp;gt;</string>
    <string name="helpdialog_no_ebooks">You have no eBooks Available!  Please hit \'MENU\' then \'Online eBook Download\'  to get new eBooks or \'Refresh eBook Library\' to add eBooks already on your memory card</string>
    <string name="helpdialog_if_you_need_help">If you need more help with Reveal Reader please visit the website and forums listed below.</string>
    <string name="label_fullscreen">Enable Fullscreen View</string>
    <string name="summary_on_fullscreen">Display is full screen</string>
    <string name="summary_off_fullscreen">Display is not full screen</string>
    <string name="enable_night_mode">Enable Night Mode</string>
    <string name="summaryOn_enable_night_mode">Night mode is on</string>
    <string name="summaryOff_enable_night_mode">Night mode is off</string>
    <string name="support_btn">Support</string>
    <string name="book_not_loaded">Could not open the eBook.</string>
    <string name="no_more_history">You\'ve run out of history!</string>
    <string name="no_history">No History</string>
    <string name="menu_help">Online Help</string>
    <string name="add_bookmark">Add bookmark here</string>
    <string name="no_bookmark">No bookmarks</string>
    <string name="wait_for_refresh">Please wait while we refresh the eBooks listing in the background&#8230;  this process will take some time to complete so please be patient.  eBooks will appear in the main list as they are processed.</string>
    <string name="wait_for_db_update">Please wait while we UPGRADE the eBook library database listing in the background&#8230;  this process will take a few minutes to complete so please be patient.  eBooks will appear in the main list as they are processed.</string>
    <string name="refresh_title">Refreshing eBooks.</string>
    <string name="upgrade_database">Upgrading Database.</string>
    <string name="error_reporting">An unexpected error has occurred. Would you like to help improve Reveal by anonymously sending the following information to the Reveal developers?    </string>
    <string name="error_title">Error</string>
    <string name="unexpected_error_title">Report Reveal Error</string>
    <string name="unknown">UNKNOWN</string>
    <string name="unloadable_chapter">UNLOADABLE CHAPTER</string>
    <string name="reveal_main_ebook_menu">Reveal :: eBook Directory</string>
    <string name="chapter_not_found">Bad link. \"{0}\" not found.</string>
    <string name="powered_by_our_own_db">Powered by our own DB  :)</string>
    <string name="menu_license">License Info</string>
    <string name="title_license">Reveal License</string>
    <string name="menu_delete_ebook">Delete eBook</string>
    <string name="menu_open_ebook">Open eBook</string>
    <string name="send_btn">Send</string>
    <string name="exit_reveal_btn">Exit Reveal</string>
    <string name="error_lib_refresh">Error refreshing eBook library: </string>
    <string name="error_bookmark_save">Error saving bookmark: </string>
    <string name="error_bookmark_load">Error loading bookmark list: </string>
    <string name="error_history_load">Error loading history list: </string>
    <string name="new_ebooks">New eBooks</string>
    <string name="error_unloadable_chapter">The chapter could not be opened.  The book may have a corrupted file.  You may want to get a new copy of the book.</string>
    <string name="error_damaged_ebook">The eBook \'\'{0}\'\' appears to be damaged or incomplete. Please download a new copy.</string>
    <string name="error_invalid_encoding">The eBook \'\'{0}\'\' appears to use an invalid character set. Please download it again.</string>
    <string name="update_bookmark">Update Bookmark</string>
    <string name="delete_bookmark">Delete Bookmark</string>
    <string name="goto_bookmark">Go to Bookmark</string>
    <string name="bookmark_updated">Bookmark updated to current location.</string>
    <string name="bookmark_deleted">Bookmark deleted.</string>
    <string name="bookmark_added">Bookmark added.</string>
    <string name="reset">Reset To Default Settings</string>
    <string name="sdcard_required">You must have an SDCARD installed to use Reveal.</string>
    <string name="confirm_reset">Reseting Reveal will default all personal settings and recreate the eBook Library database. Resetting may help Reveal to run properly if it is failing due to data corruption, but will also throw away your bookmarks and history. Do you wish to proceed?</string>
    <string name="send_email_button">Send Email</string>
    <string name="error_reporting_email">If you would like to Get HELP from the developers with this bug please check "Send Email" checkbox.  This will allow us to reply back to your email and help you with your bug.</string>
    <string name="error_reporting_email_pop">Selecting this checkbox will open an Email message for you send review and send. Thanks</string>
    <string name="donate">If you would like to Donate via PayPal to our continued development of this Reveal Reader Please click on the PayPal icon below to be redirected to PayPal\'s official website.</string>
    <string name="donate_menu">PayPal Donate</string>
    <string name="book_walker">Book Walker</string>
    <string name="menu_ebook_properties">eBook Info</string>
    <string name="title_default_font_size">Font Size</string>
    <string name="summary_default_font_size">Change default reading font size</string>
    <string name="prefs_color_mode">eBook Reading Colors</string>
    <string name="prefs_ebook_info">eBook Defaults</string>
    <string name="hilite_label">Highlight</string>
    <string name="note_label">Note</string>
    <string name="label_zoom">Reading Zoom</string>
    <string name="summary_on_zoom">Zoom button does display</string>
    <string name="summary_off_zoom">Zoom button does not display</string>
    <string name="annot_brow">Browse Notes</string>
    <string name="bmLongPressHint">Press and hold on a bookmark for more options.</string>
    <string name="more">More</string>
</resources>