<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/about_layout"
>
        <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
        >
                <LinearLayout
                        android:id="@+id/about_container"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:paddingLeft="5dip"
                        android:paddingRight="5dip"
                        android:orientation="vertical"
                >
                        <TextView
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/author"
                        android:layout_margin="5sp"/>
                        <TextView
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:autoLink="all"
                                android:text="@string/contact"
                        android:layout_margin="5sp"/>
                        <TextView
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:autoLink="all"
                                android:text="@string/website"
                        android:layout_margin="5sp"/>
                        <TextView
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:autoLink="all"
                                android:text="@string/credit_to_others" android:layout_margin="5sp"/>
                        <TextView
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:autoLink="all"
                                android:text="@string/powered_by_our_own_db" android:layout_margin="5sp"/>                        
                </LinearLayout>
        </ScrollView>
        <Button
                android:id="@+id/close_about_btn"
                android:text="@string/close"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
        android:padding="5sp"/>
</LinearLayout>