<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="wrap_content" android:orientation="vertical"
	android:layout_width="fill_parent" android:minWidth="350dp">
	<TextView android:text="@string/note_label"
		android:layout_height="wrap_content" android:layout_width="wrap_content"
		android:id="@+id/editNoteLabel" android:paddingLeft="4dp"/>
	<EditText android:layout_width="fill_parent"
		android:id="@+id/editNote" android:layout_height="120dp" 
        android:inputType="textCapSentences|textAutoCorrect|textMultiLine"/>
	<TextView android:id="@+id/hiLiteLabel" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/hilite_label"
		android:layout_gravity="center_horizontal"/>
	<RadioGroup android:id="@+id/radioGroupHiLite"
		android:layout_height="wrap_content" android:orientation="horizontal"
		android:layout_gravity="center_horizontal" android:layout_width="wrap_content">
		<RadioButton android:id="@+id/radioButtonRed"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:background="@drawable/color_red" android:paddingLeft="4dp"
			android:paddingRight="4dp"/>
		<RadioButton android:id="@+id/radioButtonPink"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:background="@drawable/color_pink" android:paddingLeft="4px"
			android:paddingRight="4px"/>
		<RadioButton android:id="@+id/radioButtonBlue"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:background="@drawable/color_blue"/>
		<RadioButton android:id="@+id/radioButtonGreen"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:background="@drawable/color_green"/>
		<RadioButton android:id="@+id/radioButtonYellow"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:background="@drawable/color_yellow"/>
		<RadioButton android:id="@+id/radioButtonWhite"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:checked="true" android:background="@drawable/color_white"/>
	</RadioGroup>
	<LinearLayout android:id="@+id/LinearLayout03"
		android:layout_height="wrap_content" android:layout_width="fill_parent">
		<Button android:layout_height="wrap_content" android:text="@string/ok"
			android:id="@+id/annotOkButton" android:layout_width="fill_parent"
			android:layout_weight="1"/>
		<Button android:layout_height="wrap_content"
			android:layout_width="fill_parent" android:text="@string/cancel"
			android:id="@+id/annotCancelButton" android:layout_weight="1"/>
	</LinearLayout>
</LinearLayout>
