<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
>
        <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="200sp"
        >
                <LinearLayout
                        android:id="@+id/error_container"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:paddingLeft="5dip"
                        android:paddingRight="5dip"
                        android:orientation="vertical"
                >
                        <TextView
                                android:id="@+id/confirm_error_send"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/error_reporting"
                        android:layout_margin="5sp"/>
                        <TextView
                                android:id="@+id/confirm_error_send_stacktrace"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:textSize="8sp"
                                android:textStyle="italic"
                        		android:layout_margin="5sp"/>
                </LinearLayout>
        </ScrollView>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="horizontal" android:layout_height="wrap_content"
		android:layout_gravity="center" android:layout_width="fill_parent" android:gravity="center_horizontal">
			<Button android:layout_height="wrap_content" android:id="@+id/send_error_btn"
			android:text="@string/send_btn" android:layout_width="wrap_content" android:padding="10dip"/>
			<Button android:layout_height="wrap_content" android:id="@+id/dont_send_error_btn"
			android:text="@string/cancel" android:layout_width="wrap_content" android:padding="10dip"/>
	    </LinearLayout>      
</LinearLayout>